--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/user.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Portfolio website of Shyam Bahety"
-    />
+    <meta name="description" content="Portfolio website of Shyam Bahety" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,10 +21,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>Shyam Bahety</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Shyam Bahety | Full Stack Developer</title>
   </head>
-  <body style="background-color: #F7FAFC;">
+  <body style="background-color: #f7fafc">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="flex flex-col min-h-screen" id="root"></div>
     <!--
