--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,20 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-HJ574M60HZ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-HJ574M60HZ");
+    </script>
     <title>Shyam Bahety | Full Stack Developer</title>
   </head>
   <body style="background-color: #f7fafc">
