Added resume, updated form link, and updated experience along with skills

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 
       gtag("config", "G-HJ574M60HZ");
     </script>
-    <title>Shyam Bahety | Full Stack Developer</title>
+    <title>Shyam Bahety | Software Development Engineer</title>
   </head>
   <body style="background-color: #f7fafc">
     <noscript>You need to enable JavaScript to run this app.</noscript>
